# bblocks_data_importers

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: new-data-importer.md
.github/workflows/: ci-cd.yml  documentation.yml  tests.yml
docs/: Makefile  conf.py  example.ipynb  ghed.ipynb  index.md  make.bat  mkdocs.yml
docs/Importers/: baci.ipynb  ghed.ipynb  hdi.ipynb  index.md  international_debt_statistics.ipynb  weo.ipynb  wfp.ipynb  world_bank.ipynb
docs/docs/: changelog.md  design-philosophy.md  getting-started.md  index.md
docs/docs/importers/: baci.md  dsa.md  ghed.md  hdr.md  ids.md  index.md  unaids.md  weo.md  wfp.md  world-bank.md
src/bblocks/data_importers/: __init__.py  config.py  utilities.py
src/bblocks/data_importers/cepii/: baci.py  baci_utils.py  baci_versions.py  extract.py  static_methods.py
src/bblocks/data_importers/imf/: dsa.py  weo.py
src/bblocks/data_importers/unaids/: unaids.py
src/bblocks/data_importers/undp/: hdi.py
src/bblocks/data_importers/wfp/: wfp.py
src/bblocks/data_importers/who/: ghed.py
src/bblocks/data_importers/world_bank/: __init__.py  ids.py  international_debt_statistics.py  (+2 more)
src/bblocks_data_importers/: __init__.py  config.py  data_validators.py  protocols.py  utilities.py
src/bblocks_data_importers/.raw_data/: README.md
src/bblocks_data_importers/cepii/: baci.py  file_handling.py  static_methods.py
src/bblocks_data_importers/imf/: weo.py
src/bblocks_data_importers/undp/: hdi.py
src/bblocks_data_importers/wfp/: countries.json  wfp.py
src/bblocks_data_importers/who/: ghed.py
src/bblocks_data_importers/world_bank/: ids.py  wb_api.py
tests/: test_config.py  test_data_validators.py  test_utilities.py
tests/test_cepii/: test_baci.py  test_baci_data_manager.py  test_baci_extract.py  test_baci_utils.py  test_baci_versions.py  test_file_handling.py  test_static_methods.py
tests/test_data/: formatted_data_ghed.feather  formatted_metadata_ghed.feather  test_ghed.XLSX
tests/test_imf/: test_dsa.py  test_weo.py
tests/test_unaids/: test_unaids.py
tests/test_undp/: test_hdi.py
tests/test_wb/: test_international_debt_statistics.py  test_world_bank.py  test_world_bank_module.py
tests/test_wfp/: test_wfp.py
tests/test_who/: test_ghed.py
