[project]
name = "bblocks-data-importers"
version = "0.3.0"
description = "Tools to import data from different sources. Part of the bblocks project."
authors = [
    {name = "ONE Campaign"},
    {name = "Luca Picci",email = "lpicci96@gmail.com"},
    {name = "Jorge Rivera", email = "jorge.rivera@one.org"},
    {name = "Miguel Haro Ruiz", email = "Miguel.HaroRuiz@one.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = " <4.0,>=3.11"

[tool.poetry]
packages = [{include = "bblocks", from = "src"}]

[tool.poetry.dependencies]
pandas = "^2.2.3"
imf-reader = "^1.3.0"
pyarrow = "^20.0.0"
wbgapi = "^1.0.12"
openpyxl = "^3.1.5"
country-converter = "^1.3"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
